kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce-backend

  template:
    metadata:
      labels:
        app: ecommerce-backend

    spec:
      containers:
        - name: ecommerce-backend
          image: cloud-ecommerce-backend:v4
          imagePullPolicy: Never

          ports:
            - containerPort: 8081

          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend

spec:
  selector:
    app: ecommerce-backend

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
